# MCP-security-code-analisys

./: Cargo.toml  README.md
src/: main.rs
src/server/: helpers.rs  mod.rs  server.rs
src/tests/: bandit_tool_test.rs
src/tests/fixtures/python/: test.py
src/tools/: bandit.rs  cargo_audit.rs  cargo_clippy.rs  mod.rs
